# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\api\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\UploadController;
 
 /*
 |--------------------------------------------------------------------------
@@ -30,3 +31,8 @@ Route::middleware('auth:sanctum')->group(function () {
 
 Route::post('login', [AuthController::class, 'login'])->name('login');
 Route::post('logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
+
+Route::post('/upload', [UploadController::class, 'upload']);
+Route::get('/files', [UploadController::class, 'listFiles']);
+Route::get('/files/{filename}', [UploadController::class, 'viewFile']);
+Route::delete('/files/{filename}', [UploadController::class, 'deleteFile']);
